<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/option_profile"
        android:title="@string/profile"
        android:icon="@drawable/profile_24"
        />

    <item
        android:id="@+id/option_pet"
        android:title="@string/my_pets"
        android:icon="@drawable/pet_24"
        />

    <item
        android:id="@+id/option_petFav"
        android:title="@string/mascotas_favoritas"
        android:icon="@drawable/pet_24"
        />

    <item
        android:id="@+id/option_appointments"
        android:title="@string/appointments"
        android:icon="@drawable/add_24"
        />

    <item
        android:id="@+id/option_services"
        android:title="@string/services"
        android:icon="@drawable/services_24"
        />

    <item
        android:id="@+id/option_meeting"
        android:title="@string/meeting"
        android:icon="@drawable/meeting_24"
        />

    <item
        android:id="@+id/option_products"
        android:title="@string/products"
        android:icon="@drawable/products_24"
        />

    <item
        android:id="@+id/option_payment"
        android:title="@string/payment_method"
        android:icon="@drawable/payment_24"
        />

    <item
        android:id="@+id/option_settings"
        android:title="@string/settings"
        android:icon="@drawable/settings_24"
        />

    <item
        android:id="@+id/option_exit_session"
        android:title="@string/sign_off"
        android:icon="@drawable/logout_24"
        />

</menu>