<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/skyblue"
    tools:context=".ui.activity.AddServiceActivity">

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registra_un_servicio"
        android:textColor="@color/white"
        android:background="@color/blueshift"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editNameService"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_del_servicio"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:inputType="text"
        android:textAlignment="center"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/description_24"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editDescriptionService"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/descripci_n_del_servicio"
        android:textSize="20sp"
        android:inputType="text"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/description_24"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editNameService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editPriceService"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/precio_del_servicio"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/money_24"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editDescriptionService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/editImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/url_image"
        android:inputType="text"
        android:background="@drawable/edit_text_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:drawableLeft="@drawable/image_24"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editPriceService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSaveService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/blueshift"
        android:text="@string/guardar"
        android:textSize="20sp"
        android:drawableLeft="@drawable/check_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editImage"
        app:layout_goneMarginTop="25dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
