<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.RegisterActivity">

    <ImageView
        android:id="@+id/imgRegistrar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground_disen"
        android:src="@drawable/vetlogin"
        android:contentDescription="@null"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/textRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:text="@string/registrar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/imgRegistrar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/txtRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_sus_datos_para_registrarse"
        android:fontFamily="@font/lobster"
        android:textColor="#FBFBFB"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegistrar"
        android:layout_marginTop="30dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:hint="@string/nombres"
        android:layout_marginTop="25dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="text"
        android:autofillHints="name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRegistrar"
        app:layout_constraintWidth_percent=".8"
        android:drawableStart="@drawable/profile_24"
        android:drawablePadding="13dp"
        android:backgroundTint="#CCCCCC"/>

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:hint="@string/apellidos"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="text"
        android:autofillHints="name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameEditText"
        app:layout_constraintWidth_percent=".8"
        android:drawableStart="@drawable/profile_24"
        android:drawablePadding="13dp"
        android:backgroundTint="#CCCCCC"/>

    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#CCCCCC"
        android:drawableStart="@drawable/email_24"
        android:drawablePadding="13dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:hint="@string/correo_electr_nico"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#CCCCCC"
        android:drawableStart="@drawable/key_24"
        android:drawablePadding="13dp"
        android:hint="@string/contrase_a"
        android:textColor="@color/white"
        android:autofillHints="password"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEmailEditText"
        app:layout_constraintWidth_percent=".8" />

    <CheckBox
        android:id="@+id/isVet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/eres_veterinario"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnCreate_Account1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.147" />

    <Button
        android:id="@+id/btnCreate_Account1"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cambiar_bg"
        android:onClick="Inicio"
        android:padding="14dp"
        android:textSize="25sp"
        android:text="@string/registrarse"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintVertical_bias="0.43"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:id="@+id/txtEstas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/est_s_registrado"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCreate_Account1"
        app:layout_constraintHorizontal_bias=".3"/>

    <TextView
        android:id="@+id/txvLogueate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logueate_aqu"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtEstas"
        app:layout_constraintTop_toBottomOf="@id/btnCreate_Account1"
        app:layout_constraintHorizontal_bias=".1"/>

    <!-- <ProgressBar
        android:id="@+id/pgbRegistrarse"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="392dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgRegistrar"
        app:layout_constraintVertical_bias="0.0" /> -->

</androidx.constraintlayout.widget.ConstraintLayout>