<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImageUser"
            android:layout_width="160dp"
            android:layout_height="150dp"
            android:contentDescription="@string/profile"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="@color/skybluelight"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toTopOf="@+id/nameTextUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <TextView
            android:id="@+id/nameTextUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_completo"
            android:fontFamily="@font/lobster"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/profileImageUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/emailTextUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo_example_com"
            android:fontFamily="@font/lobster"
            android:textSize="17sp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/nameTextUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="6dp" />

        <TextView
            android:id="@+id/vetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isvet"
            android:textSize="17sp"
            android:fontFamily="@font/lobster"
            android:textColor="@color/black"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintTop_toBottomOf="@+id/emailTextUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="6dp" />

        <Button
            android:id="@+id/buttonReservarMeet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reservar"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vetText" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
