<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AddPetActivity">

    <TextView
        android:id="@+id/textTituloMeet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registra_una_reuni_n"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="36sp"
        android:background="@color/blueshift"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/fecha"
        android:inputType="date"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:layout_marginTop="30sp"
        android:drawableLeft="@drawable/time_24"
        android:background="@drawable/edit_text_bg"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTituloMeet"/>

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:drawableLeft="@drawable/time_24"
        android:background="@drawable/edit_text_bg"
        android:textAlignment="center"
        android:hint="@string/hora"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agendar"
        android:textSize="20sp"
        android:backgroundTint="@color/blueshift"
        android:drawableLeft="@drawable/check_24"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

</androidx.constraintlayout.widget.ConstraintLayout>
